--- a/JavaScript_code/01-编程语言.html
+++ b/JavaScript_code/01-编程语言.html
@@ -7,10 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script>
+        //使用软件——Visual Studio Code—— 微软出品的，可以运行于 Mac OS X、Windows和 Linux 之上的，编写web应用的，跨平台的代码编辑器。
         //此js_code是向pink老师学习的，我在pink老师的内容上加以补充了 资料上的 及 一些扩展和个人见解
         //open in browser 是个很好地排版自动优化插件，小伙伴们可以根据需求来安装，
-        //live server是一个可以打开浏览器实时检测代码的插件，建议安装下，或者类似的插件，方便浏览代码状况~
-        //很多好插件都可以自己摸索， 在汲取中进步
+        //live server是一个可以打开浏览器实时检测代码的插件，建议安装下，或者类似的插件，方便浏览代码实时状况~
+        //很多好插件都可以自己摸索， 在汲取中不断进步
         alert('我是格式化文本对齐插件，安装上我可以让有更好的页面排版');
         alert('我是live server，安装上我可以让有更好的观影视线');
     </script>
